--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,12 +58,60 @@
     <string name="please_specify_a_number_of_days">Please specify a number of days!</string>
     <string name="Trip">Trip</string>
     <string name="text_days">days</string>
+    <string name="search_hint">Search</string>
     <string-array name="state">
-        <item>State</item><item>Minnesota</item><item>Montana</item>
-        <item>North Dakota</item><item>Idaho</item><item>Washington</item><item>Arizona</item><item>California</item><item>Colorado</item><item>Nevada</item><item>New Mexico</item><item>Oregon</item><item>Utah</item>
-        <item>Wyoming</item><item>Arkansas</item><item>Iowa</item><item>Kansas</item><item>Missouri</item><item>Nebraska</item><item>Oklahoma</item><item>South Dakota</item><item>Louisiana</item><item>Texas</item>
-        <item>Connecticut</item><item>Massachusetts</item><item>New Hampshire</item><item>Rhode Island</item><item>Vermont</item><item>Alabama</item><item>Florida</item><item>Georgia</item><item>Mississippi</item><item>South Carolina</item>
-        <item>Illinois</item><item>Indiana</item><item>Kentucky</item><item>North Carolina</item><item>Ohio</item><item>Tennessee</item><item>Virginia</item><item>Wisconsin</item><item>Wyoming</item><item>West Virginia</item>
-        <item>Delaware</item><item>District of Columbia</item><item>Maryland</item><item>New Jersey</item><item>New York</item><item>Pennsylvania</item><item>Maine</item><item>Hawaii</item><item>Alaska</item><item>Michigan</item>
+        <item>State</item>
+        <item>Minnesota</item>
+        <item>Montana</item>
+        <item>North Dakota</item>
+        <item>Idaho</item>
+        <item>Washington</item>
+        <item>Arizona</item>
+        <item>California</item>
+        <item>Colorado</item>
+        <item>Nevada</item>
+        <item>New Mexico</item>
+        <item>Oregon</item>
+        <item>Utah</item>
+        <item>Wyoming</item>
+        <item>Arkansas</item>
+        <item>Iowa</item>
+        <item>Kansas</item>
+        <item>Missouri</item>
+        <item>Nebraska</item>
+        <item>Oklahoma</item>
+        <item>South Dakota</item>
+        <item>Louisiana</item>
+        <item>Texas</item>
+        <item>Connecticut</item>
+        <item>Massachusetts</item>
+        <item>New Hampshire</item>
+        <item>Rhode Island</item>
+        <item>Vermont</item>
+        <item>Alabama</item>
+        <item>Florida</item>
+        <item>Georgia</item>
+        <item>Mississippi</item>
+        <item>South Carolina</item>
+        <item>Illinois</item>
+        <item>Indiana</item>
+        <item>Kentucky</item>
+        <item>North Carolina</item>
+        <item>Ohio</item>
+        <item>Tennessee</item>
+        <item>Virginia</item>
+        <item>Wisconsin</item>
+        <item>Wyoming</item>
+        <item>West Virginia</item>
+        <item>Delaware</item>
+        <item>District of Columbia</item>
+        <item>Maryland</item>
+        <item>New Jersey</item>
+        <item>New York</item>
+        <item>Pennsylvania</item>
+        <item>Maine</item>
+        <item>Hawaii</item>
+        <item>Alaska</item>
+        <item>Michigan</item>
     </string-array>
 </resources>
