Chat Activity working changed..
Because:
- Users getting Notifications is not required for our project as i guess we don't need to make the chat experience more user friendly then this for now on.
- Users online/offline status wasn't added.
- Forgot to add Timestamp so added it for message received by users and users last online time (last seen).

It may create some issues while accessing the app because of the database changes. So it is advised to check the database and make changes accordingly or delete the account and make the new one. It will solve the errors regarding it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="users">Users</string>
     <string name="inventory">Inventory</string>
     <string name="item_details">Item Details</string>
-    <string name="notifications">Notifications</string>
+    <string name="allchats">Chats</string>
     <string name="user_profile">Profile"</string>
     <string name="empty_message_error">Can not send empty message</string>
     <string name="review_error">Please Enter a Review</string>
