Update UI for travel feed, map screen, my profile, trip related pages and chat screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,52 +39,62 @@
     <string name="register_successful">User registration is Successful. Please verify your e-mail address.</string>
     <string name="travel_feed">Travel Feed</string>
     <string name="post_button">Post Trip</string>
-    <string name="hint_city_town">City/Town</string>
+    <string name="hint_city_or_town">City or Town</string>
     <string name="hint_title">Title </string>
     <string name="hint_description">Description </string>
     <string name="toast_uploading_photo">Uploading photo...</string>
     <string name="dialog_select_photo_choose_photo_from_memory">Choose photo from memory</string>
     <string name="dialog_select_photo_take_a_photo">Take a photo</string>
     <string name="dialog_select_photo">Select photo</string>
-    <string name="add_a_trip">Add a trip</string>
+    <string name="add_a_trip"><u><b>Add a trip</b></u></string>
     <string name="please_choose_a_state">Please choose a state!</string>
     <string name="please_specify_a_city">Please specify a city!</string>
     <string name="please_select_a_photo">Please select a photo!</string>
     <string name="toast_compressing_photo">Compressing photo...</string>
     <string name="toast_photo_uploaded_successfully">Photo uploaded successfully!</string>
-    <string name="toast_could_not_upload_photo">Could not uploade photo</string>
-    <string name="hint_number_of_days">Number of days</string>
-    <string name="hint_date">Date </string>
+    <string name="toast_could_not_upload_photo">Could not upload photo</string>
+    <string name="hint_length_of_trip">Length of Trip</string>
+    <string name="hint_start_date">Start Date</string>
     <string name="please_specify_a_number_of_days">Please specify a number of days!</string>
     <string name="Trip">Trip</string>
+    <string name="text_trip_length">Trip length:</string>
     <string name="text_days">days</string>
     <string name="hint_search">Search...</string>
     <string name="elasticsearch">elasticsearch</string>
     <string name="field_password">password</string>
     <string name="search_hint">Search...</string>
-    <string name="edit">EDIT</string>
-    <string name="save_button">SAVE</string>
+    <string name="save_button">Save Changes</string>
     <string name="cancel_button">CANCEL</string>
     <string name="toast_trip_updated">Trip is updated!</string>
     <string name="remove_button">REMOVE TRIP</string>
-    <string name="set_trip_as_public">Set trip as public</string>
+    <string name="set_trip_as_public">Set trip as visible to public\u0020\u0020\u0020\u0020\u0020\u0020</string>
     <string name="is_public">Trip is public</string>
     <string name="is_private">Trip is private</string>
     <string name="travelers_diary">Traveler\'s Diary</string>
     <string name="text_email_address">Email Address:</string>
     <string name="text_password">Password:</string>
     <string name="edit_trip">Edit Trip</string>
-    <string name="remove_trip">Remove Trip</string>
+    <string name="remove_trip">Delete Trip</string>
     <string name="your_travel_stories">Your Travel Stories</string>
     <string name="no_trip_hint">You haven\'t added any trips yet,</string>
     <string name="add_a_trip_lowercase"><u>add a trip</u></string>
-    <string name="view_travel_feed">View Travel Feed</string>
+    <string name="view_travel_feed"><b>View Travel Feed</b></string>
     <string name="no_trip_in_state_hint">There is no trip in the selected state.</string>
     <string name="select_action">Select Action</string>
     <string name="set_as_public">Set as Public</string>
     <string name="set_as_private">Set as Private</string>
+    <string name="edit_your_profile">Edit your profile</string>
+    <string name="logout"><u>Logout</u></string>
+    <string name="trip_date">Trip start date:</string>
+    <string name="hint_state">State</string>
+    <string name="hint_no_date">no date provided</string>
+    <string name="add_a_trip_title">Add a Trip</string>
+    <string name="hint_number_of_days">Number of days</string>
+    <string name="title_your_travel_map">Your Travel Map</string>
+    <string name="title_usa">United States of America</string>
+    <string name="hint_message">Message</string>
     <string-array name="state">
-        <item>State</item>
+        <item></item>
         <item>Minnesota</item>
         <item>Montana</item>
         <item>North Dakota</item>
