--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="usernamehint">example@example.com</string>
     <string name="passwordhint">no less than 10 characters</string>
-    <string name="signinbutton">SIGN IN</string>
-    <string name="signupbutton">SIGN UP</string>
+    <string name="signinbutton">Sign in</string>
+    <string name="signupbutton">Sign up</string>
     <string name="donthaveanaccount">Don\'t have account? Click on Sign up</string>
     <string name="alreadyhaveaccount">Already have account? Click on Sign in </string>
     <string name="Signuppasswordhint">Password </string>
@@ -100,6 +100,12 @@
     <string name="profile_picture">Profile Picture</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
+    <string name="history">History</string>
+    <string name="explore">Explore</string>
+    <string name="no_history_in_current_state">You haven\'t visited this state yet.</string>
+    <string name="no_trip_in_current_state">No recommended trip in this state.</string>
+    <string name="plan_trip">Plan Trip</string>
+    <string name="add_trip">Add Trip</string>
     <string-array name="state">
         <item></item>
         <item>Minnesota</item>
